NO WAY!!! STANDALONE JAR FILE SUPPORT IS HERE!!!!!!