@@ -1,17 +1,18 @@
-package io.github.lionarius.engine.resource.font;
+package io.github.lionarius.engine.resource.impl.font;
 
 import com.google.gson.Gson;
 import com.google.gson.GsonBuilder;
 import io.github.lionarius.engine.resource.ResourceLoader;
 import io.github.lionarius.engine.resource.ResourceManager;
-import io.github.lionarius.engine.resource.font.json.FontDeserializer;
-import io.github.lionarius.engine.resource.texture.Texture;
-import io.github.lionarius.engine.resource.texture.TextureCreateParameters;
+import io.github.lionarius.engine.resource.impl.font.json.FontDeserializer;
+import io.github.lionarius.engine.resource.impl.texture.Texture;
+import io.github.lionarius.engine.resource.impl.texture.TextureCreateParameters;
+import io.github.lionarius.engine.resource.stream.ResourceStreamProvider;
 import lombok.RequiredArgsConstructor;
+import org.apache.commons.io.IOUtils;
 
 import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Path;
+import java.nio.charset.StandardCharsets;
 
 @RequiredArgsConstructor
 public class FontLoader implements ResourceLoader<Font> {
@@ -21,8 +22,12 @@ public class FontLoader implements ResourceLoader<Font> {
     private final ResourceManager resourceManager;
 
     @Override
-    public Font loadFromFile(String name, String filepath, Object parameters) throws IOException {
-        var metadata = Files.readString(Path.of(filepath + FontLoader.METADATA_EXTENSION));
+    public Font loadFromFile(String name, ResourceStreamProvider streamProvider, Object parameters) throws IOException {
+        String metadata;
+        try (var stream = streamProvider.getStream(name + FontLoader.METADATA_EXTENSION)) {
+            metadata = IOUtils.toString(stream, StandardCharsets.UTF_8);
+        }
+
         try {
             var font = GSON.fromJson(metadata, Font.class);
             var atlasTexture = this.resourceManager.get(Texture.class, name + FontLoader.ATLAS_EXTENSION, TextureCreateParameters.SMOOTH);
